--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
 		"libs/modules/egret/egret.web.js",
 		"libs/modules/game/game.js",
 		"libs/modules/tween/tween.js",
+		"libs/modules/socket/socket.js",
 		"libs/modules/assetsmanager/assetsmanager.js",
 		"libs/modules/promise/promise.js"
 	],
